fixed cart alignment issue

--- a/styles.css
+++ b/styles.css
@@ -472,7 +472,7 @@ footer a:visited {color: white;}
     margin: 0 auto;
     margin-top: 50px;
     padding-bottom: 100px;
-    max-width: 650px;
+    max-width: 800px;
 }
 
 .products-container ion-icon {
@@ -484,10 +484,19 @@ footer a:visited {color: white;}
 
 .product-header {
     width: 100%;
-    max-width: 650px;
+    max-width: 800px;
     display: flex;
     border-bottom: 4px solid #2376bc;
     margin: 0 auto;
+}
+
+.product {
+    width: 45%;
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    padding: 10px 0;
+    border-bottom: 1px solid #2376bc;
 }
 
 .product-title {width: 45%;}
